<resources>
    <string name="app_name">Mappe2_s364756</string>

    <!-- ____________MainActivity_________________ -->
    <string name="title_events">Avtaler</string>
    <string name="btn_newEvent">Legg til ny avtale</string>
    <string name="btn_friends">Venner</string>
    <string name="btn_preferences">Instillinger</string>

    <!-- ____________NewEvent_________________ -->
    <string name="title_newEvents">Legg til ny avtale</string>
    <string name="placeholder_eventName">Navn på avtale:</string>
    <string name="placeholder_eventDate">Dato:</string>
    <string name="placeholder_eventTime">Klokkeslett:</string>
    <string name="placeholder_eventPlace">Sted:</string>
    <string name="btn_saveNewEvent">Lagre ny avtale</string>


    <!-- ____________FriendsActivity_________________ -->
    <string name="title_friends">Venner</string>
    <string name="btn_newFriend">Legg til ny venn</string>

    <!-- ____________NewFriends_________________ -->
    <string name="title_newFriends">Legg til ny venn</string>
    <string name="placeholder_friendName">Navn:</string>
    <string name="placeholder_friendPhone">Tlf-nummer:</string>
    <string name="btn_saveNewFriend">Lagre ny venn</string>

    <!-- ____________Preferences_________________ -->
    <string name="titlePreferences">Instillinger</string>
    <string name="placeholder_onOfSms">slå sms-tjenesten av eller på: (default: av)</string>
    <string name="placeholder_decideTimeOfSms">Velg når SMSen skal sendes: (default: kl.06:00)</string>
    <string name="placeholder_setTextOfSms">sette en default melding som skal sendes i SMSen: </string>
    <string name="placeholder_settingsEvents">Gjør endringer på avtaler: </string>
    <string name="placeholder_settingsFriends">Gjør endringer på venner: </string>

    <string name="btnSmsOn">PÅ</string>
    <string name="btnSmsOf">AV</string>
    <string name="chooseTimeButton">endre tidspunkt</string>
    <string name="defaultMessage">Husk avtalen din!</string>
    <string name="setMessageBtn">endre tekst</string>


    <string name="placeholder_setText">Skriv inn en ny melding</string>
</resources>