<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBlue"
    android:padding="16dp"
    tools:context=".PreferencesActivity">


    <TextView
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/titlePreferences"
        android:textSize="32dp"
        android:textStyle="bold" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_onOfSms"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOf"
            android:text="@string/btnOf"
            />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/placeholder_decideTimeOfSms"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chooseTimeButton"
            android:backgroundTint="@color/darkBlue"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/chooseTimeButton"/>

        <TextView
            android:id="@+id/setTimeMessageTxt"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="" />
    </GridLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:text="@string/placeholder_setTextOfSms"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/defaultMessage"
        android:layout_width="wrap_content"
        android:textSize="18dp"
        android:layout_height="38dp"
        android:text="@string/defaultMessage" />


    <Button
        android:id="@+id/setMessageBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/setMessageBtn" />


</LinearLayout>