<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="MissingConstraints"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_marginTop="20dp"
        android:textSize="32dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/title_events"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/title_events" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="344dp"
        android:layout_height="288dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="156dp" />

    <Button
        android:id="@+id/btn_newEvent"
        android:layout_marginTop="20dp"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/btn_newEvent" />

    <GridLayout
        android:layout_marginTop="20dp"
        android:layout_width="290dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="46dp"
        android:layout_gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/btn_friends"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/btn_friends" />

        <Button
            android:id="@+id/btn_preferences"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_preferences" />
    </GridLayout>
</LinearLayout>